# cinematch-ai-backend

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/providers/: __init__.py  base.py  factory.py  openrouter_gemma.py
app/routes/: __init__.py  chat.py  discover.py  health.py  movies.py  recommendations.py  saved_movies.py
app/schemas/: __init__.py  chat.py  movies.py
app/services/: __init__.py  dependencies.py  preference_extraction.py  recommendation_service.py  saved_movies_service.py  supabase_service.py  tmdb_service.py
supabase/migrations/: 20260503_000001_initial_schema.sql  20260503_000002_health_check.sql  20260503_000003_health_check_returns_ok.sql  20260504_000004_harden_mobile_persistence.sql  20260508_000005_cinematic_dna.sql  20260508_000006_watched_movies.sql  20260508_000007_not_interested.sql  20260508_000008_user_settings.sql
